--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "CSV Importer",
+    "name": "laravel/laravel",
     "type": "project",
-    "description": "CSV importer",
-    "keywords": ["csv importer", "import csv"],
+    "description": "The Laravel Framework.",
+    "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
